assets/css/feed.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap');
body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    background-color:#fcf0e7;
    background-image: url(../images/svg/body_background.svg);
    background-repeat: no-repeat;
    background-size: cover;
}

.top-navigation {
    z-index: -1;
    height: 5rem;
    margin-left: 57px;
    width: calc(100% - 57px - 30vh);
    border-bottom: solid 1px blue;
    background-color: #FFFFFA;
    margin-right: 30vh;
}

.posts-wrapper {
    margin: 0;
    margin-top: 17rem;
    transition: all .2s;
}

.search-box-wrapper {
    position: relative;
}

.Search-input {
    padding: .5rem;
    background-color: rgb(233, 233, 233);
    width: 20rem;
    padding-left: 3rem;
    transition: .2s all;
    border: 1px solid rgb(179, 179, 179);
}

.Search-input:focus {
    border: 1px solid rgb(179, 179, 179);
    /* border: none; */
    background-color: rgb(247, 241, 241);
    outline: none;
    padding: .5rem;
    padding-left: 3rem;
}

.search-icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 1rem;
    font-size: 1.2rem;
}


.Search-input:hover {
    background-color: rgb(247, 241, 241);
    transition: all .2s;
}

#post {
    z-index: 1;
}
.add-post {
    margin-top: 3rem;
    box-sizing: border-box;
    height: 150px;
    width: 100%;
    border-radius: 5px;
    margin-bottom: 5rem;
}

.add-post .top-section {
    height: 40px;
    width: 100%;
    border: 1px solid black;
    border-bottom: 1px solid #000;
    position: relative;
    background-color: #EFE6E6;
}

.post {
    height: calc(100% - 40px);
    width: 100%;
    border: none;
    outline: none;
    padding: 1rem;
    resize: none;
   
    transition: all .2s;
    /* background-color: #fbf6f0; */
}
.add-post-title {
    width: 100%;
    padding: 1rem;
    /* border: none 1px solid black; */
    /* background-color: transparent; */
    /* background-color: #FFFFFA; */
    /* border: 1px solid black; */
    /* padding-left: rem; */
}

.add-post-title:focus{
    /* border: none; */
    outline: none;
    
}

.post:focus {
    height: 400px;
    transition: .2s all;
}

.add-post-text {
    font-size: 2rem;
    position: absolute;
    right: 20px;
    bottom: -90px;
    text-align: center;
    width: 3rem;
    justify-content: center;
    border-radius: 50%;
    transition: .3s;
    cursor: pointer;
}

.add-post-text:hover {
    font-size: 2.3rem;
    transition: all .2s;
}

.post-heading {
    font-size: 1.2rem;
    margin: 0 auto;
    margin-left: 1rem;
    margin-top: .51rem;
    font-weight: 400;
}

.main-content {
    margin-right: 30vh;
}
.page-wrapper {
    margin-left: 57px;
}

.post-card {
    height: 10rem;
    width: 100%;
    margin-top: 3rem;
}

.feed-avatar {
    height: 1.8rem;
    width: 1.8rem;
    border-radius: 50%;
}

.sidebar-avatar-name {
    font-size: 0;
    margin-top: 1rem;
}

.suggestion-header {
    font-size: 1.4rem;
    font-weight: 300;
}

.suggestion-avatar {
    height: 3rem;
    width: 3rem;
    border-radius: 50%;
}
.suggestion-icon {
    font-size: 2rem;
}
.arrow-collapse-suggestion {
    cursor: pointer;
    transform: rotate(-180deg);
    transition: all .5s;
}

.suggestion-name {
    font-size: .9rem;
    display: inline-block;
    vertical-align: middle;
    font-weight: 400;
}

.suggestion-btn a {
    font-size: .8rem;
    padding: .5rem;
    background-color: rgb(84, 84, 212);
    color: white;
    text-decoration: none;
    transition: .2s all;
}

.suggestion-btn a:hover {
    background-color: rgba(0, 0, 255, 0.692);
    transition: .2s all;
}

.catagorey-section {
    margin-top: 3rem;
    width: 100%;
    font-size: 1.4rem;
    text-align: left;
}

.filter-content {
    width: 100%;
    height: fit-content;
    margin: 0;
}

.filter-item {
    width: 100%;
    padding: 1rem;
    color: black;
    font-size: 1rem;
    text-decoration: none;
}

.filter-item:hover {
    color: rgb(146, 98, 98);
    text-decoration: none;
    outline: none;
    transition: .3s all;
}

.feed-card {
    margin-top: 50px;
    background: #FFFFFA;
    border: 1px solid #2200ff67;
    box-sizing: border-box;
    position: relative;
    padding: 1rem 3.2rem 3rem 3.2rem;
    border-radius: 20px;
}

.feed-profile-info {
    display: flex;
    justify-content: space-between;
}

.feed-tittle {
    font-weight: 500;
    font-size: 1.6rem;
    width: fit-content;
    padding-right: 10px;
    border-bottom: 2px solid rgba(177, 177, 177, 0.55);
    line-height: 156.9%;
}

.feed-date {
    color: #929292;
    font-size: .8rem;
}

.feed-content {
    font-family: "Montserrat";
    font-weight: 300;
    font-size: 1rem;
}
.feed-profile {
    height: 3rem;
    object-fit: cover;
    width: 3rem;
    border-radius: 50%;
}
.feed-profile-name {
    width: fit-content;
    font-style: normal;
    font-weight: normal;
    font-size: 1em;
}

.feed-card-bottom {
    width: fit-content;
    display: flex;
    justify-content: space-between;
}

.feed-bottom-left {
    margin-right: .5rem;
    height: fit-content;
    width: fit-content;
}

.feed-bottom-right {
    height: fit-content;
    width: fit-content;
}

.feed-bottom-right .feed-date {
    margin-top: 10px;
    color: black;
    font-weight: bold;
    /* font-style: ; */
    display: inline;
    margin-bottom: auto;
    vertical-align: middle;
}

img {
    vertical-align: middle;
    width: 70px;
    height: 70px;
    border-radius: 50%;
}

.feed-avatar {
    width: fit-content;
    position: absolute;
    left: -5%;
    top: -8%;
}

.sidebar-avatar {
    top: 50%;
    left: 50%;
    height: 1.8rem;
    width: 1.8rem;
}

/* suggestion -box -area */

.suggestion-img {

    border-radius: 50%;
    background-size: cover;
    object-fit: contain;
    transition: all .3s;
}

.suggestion-card {
    padding: 1rem;
    overflow:hidden ;
}



.d-flex {
    display: flex;
    align-items: center;
    vertical-align: middle;
}

.suggestion-card {
    display: flex;
    align-items: center;
    justify-content: space-between;
}



/* end suggestion */

/* like button */

input[type="checkbox"] {
    display: none;
}

label {
    position: relative;
    cursor: pointer;
}

label svg {
    width: 35px;
}

input[type="checkbox"]+label svg {
    fill: #b4b4b4;
    z-index: 12;
    transition: all .3s;
}

input[type="checkbox"]:checked+label svg {
    z-index: 12;
    fill: #ff0000;
    animation: like .8s ease-out;
    transition: all .3s;
}

.detail-modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(212, 215, 243, 0.76);
    background-color: rgba(139, 189, 255, 0.4);
}

/* Modal Content */

.detail-modal-content {
    position: relative;
    margin: auto;
    padding: 0;
    background-color: #FFFFFA;
    width: 40%;
    border: 1px solid blue;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    animation-name: animatetop;
    animation-duration: 0.4s
}

/*  post card-section */

.content-card {
    border-radius: 1rem;
    background-color: #fbf6f0;
    border: 1px solid rgb(188, 188, 255);
    box-shadow: 0px 2px 4px -2px rgba(0, 0, 0, 0.25);
}

.avatar_post img {
    height: 3rem;
    width: 3rem;
    border-radius: 50%;
}

.card-favorites {
    font-size: 1.5rem;
    vertical-align: middle;
    margin-top: auto;
    margin-bottom: auto;
}

.post-content-section {
    font-size: 1.5rem;
    margin-left: 1rem;
}

.content_body {
    font-size: 1rem;
}

.like-count-section i, .card-favorites {
    cursor: pointer;
    font-size: 1.3rem;
}

.follow-btn {
    padding: .5rem 1.2rem;
    background-color: rgb(155, 69, 235);
    text-decoration: none;
    color: white;
    font-size: .8rem;
    border-radius: .3rem;
    transition: .3s all;
    width: auto;
    height: auto;
    border: 1px solid transparent;
}
.follow-btn:hover {
    text-decoration: none;
    color: white;
    background-color: rgb(107, 141, 255);
}
.follow-btn:focus {
    border: 1px solid rgb(185, 185, 185);

}
.btn-follow {
    transition: all .3s;
}
/* search - bar  */

/* Add Animation */


@keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

.fa-heart{
    color: silver;
}

.post_liked{
    color: red;
}

.star-i{
    color:#bbb;
}

.post_favourited{
    color: #383E56;
}

.arrow-collapse {
    transform: rotate(-180deg);
    transition: all .3s;
}

.feed-delete{
    display: none;
    transition: opacity 1s ease-out;
    opacity: 0;
}

